<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_bin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:maxLength="8"
        app:layout_constraintBottom_toTopOf="@id/cv_number"
        app:layout_constraintEnd_toStartOf="@id/btn_find"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_bin"
        app:layout_constraintTop_toTopOf="@id/et_bin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_bin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_length_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_number_title" />

            <TextView
                android:id="@+id/tv_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_length_title"
                app:layout_constraintTop_toTopOf="@id/tv_length_title"
                tools:text="length" />

            <TextView
                android:id="@+id/tv_luhn_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luhn_algorithm"
                app:layout_constraintStart_toStartOf="@id/tv_length_title"
                app:layout_constraintTop_toBottomOf="@id/tv_length_title" />

            <TextView
                android:id="@+id/tv_luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_luhn_title"
                app:layout_constraintTop_toTopOf="@id/tv_luhn_title"
                tools:text="luhn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_number">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_scheme_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/scheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_scheme_title"
                app:layout_constraintTop_toTopOf="@id/tv_scheme_title"
                tools:text="scheme" />

            <TextView
                android:id="@+id/tv_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                app:layout_constraintStart_toStartOf="@id/tv_scheme_title"
                app:layout_constraintTop_toBottomOf="@id/tv_scheme_title" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_type_title"
                app:layout_constraintTop_toTopOf="@id/tv_type_title"
                tools:text="type" />

            <TextView
                android:id="@+id/tv_brand_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                app:layout_constraintStart_toStartOf="@id/tv_scheme_title"
                app:layout_constraintTop_toBottomOf="@id/tv_type_title" />

            <TextView
                android:id="@+id/tv_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_brand_title"
                app:layout_constraintTop_toTopOf="@id/tv_brand_title"
                tools:text="brand" />

            <TextView
                android:id="@+id/tv_prepaid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid"
                app:layout_constraintStart_toStartOf="@id/tv_scheme_title"
                app:layout_constraintTop_toBottomOf="@id/tv_brand_title" />

            <TextView
                android:id="@+id/tv_prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_prepaid_title"
                app:layout_constraintTop_toTopOf="@id/tv_prepaid_title"
                tools:text="prepaid" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_numeric_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/numeric"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_country_title" />

            <TextView
                android:id="@+id/tv_numeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_numeric_title"
                app:layout_constraintTop_toTopOf="@id/tv_numeric_title"
                tools:text="numeric" />

            <TextView
                android:id="@+id/tv_alpha2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alpha2"
                app:layout_constraintStart_toStartOf="@id/tv_numeric_title"
                app:layout_constraintTop_toBottomOf="@id/tv_numeric_title" />

            <TextView
                android:id="@+id/tv_alpha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_alpha2_title"
                app:layout_constraintTop_toTopOf="@id/tv_alpha2_title"
                tools:text="alpha2" />

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="@id/tv_alpha2_title"
                app:layout_constraintTop_toBottomOf="@id/tv_alpha2_title" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_name_title"
                app:layout_constraintTop_toTopOf="@id/tv_name_title"
                tools:text="name" />

            <TextView
                android:id="@+id/tv_currency_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                app:layout_constraintStart_toStartOf="@id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@id/tv_name_title" />

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_currency_title"
                app:layout_constraintTop_toTopOf="@id/tv_currency_title"
                tools:text="currency" />

            <TextView
                android:id="@+id/tv_coords_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coords"
                app:layout_constraintStart_toStartOf="@id/tv_currency_title"
                app:layout_constraintTop_toBottomOf="@id/tv_currency_title" />

            <TextView
                android:id="@+id/tv_coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_coords_title"
                app:layout_constraintTop_toTopOf="@id/tv_coords_title"
                tools:text="coords" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/light_blue"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_country">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_bank_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/bank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_bank_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bank_title" />

            <TextView
                android:id="@+id/tv_name_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_name_bank_title"
                app:layout_constraintTop_toTopOf="@id/tv_name_bank_title"
                tools:text="name_bank" />

            <TextView
                android:id="@+id/tv_url_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                app:layout_constraintStart_toStartOf="@id/tv_name_bank_title"
                app:layout_constraintTop_toBottomOf="@id/tv_name_bank_title" />

            <TextView
                android:id="@+id/tv_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_url_title"
                app:layout_constraintTop_toTopOf="@id/tv_url_title"
                tools:text="url" />

            <TextView
                android:id="@+id/tv_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="@id/tv_url_title"
                app:layout_constraintTop_toBottomOf="@id/tv_url_title" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_phone_title"
                app:layout_constraintTop_toTopOf="@id/tv_phone_title"
                tools:text="phone" />

            <TextView
                android:id="@+id/tv_city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                app:layout_constraintStart_toStartOf="@id/tv_phone_title"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_title" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_city_title"
                app:layout_constraintTop_toTopOf="@id/tv_city_title"
                tools:text="city" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/gray"
        android:src="@drawable/ic_history"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>